# dbus-soundrecorder

./: CMakeLists.txt  README.md  dbus-soundrecorder.pro  ffmpeglauncher.cpp  ffmpeglauncher.h  main.cpp  playerwatcher.cpp  playerwatcher.h
